mongodb connection setup done

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-PORT= 3000
+# PORT= 3000
+# MONGODB_URI= mongodb+srv://samirverma527:samir@8051@cluster0.2kogtxz.mongodb.net
+PORT=3000
+MONGODB_URI=mongodb+srv://samirverma527:samir%408051@cluster0.2kogtxz.mongodb.net
