utils part done

--- a/.env.sample
+++ b/.env.sample
@@ -2,4 +2,5 @@
 # MONGODB_URI= mongodb+srv://samirverma527:your-password@cluster0.2kogtxz.mongodb.net
 
 PORT=3000
+CORS_ORIGIN=*
 MONGODB_URI=mongodb+srv://samirverma527:samir%408051@cluster0.2kogtxz.mongodb.net
