--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Samir",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.4"
