add user and video model

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,7 @@
 PORT=3000
 CORS_ORIGIN=*
 MONGODB_URI=mongodb+srv://samirverma527:samir%408051@cluster0.2kogtxz.mongodb.net
+ACCESS_TOKEN_SECRET=js-backend-access-token
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=js-backend-token
+REFRESH_TOKEN_SECRET_EXPIRY=10d
