--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@
 PORT=3000
 CORS_ORIGIN=*
 MONGODB_URI=mongodb+srv://samirverma527:samir%408051@cluster0.2kogtxz.mongodb.net
+ACCESS_TOKEN_SECRET=mySuperSecretKey123!@#
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=daefwetwet32432r#$%^
+REFRESH_TOKEN_SECRET_EXPIRY=10d
