multer and middleware setup

--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ ACCESS_TOKEN_SECRET=mySuperSecretKey123!@#
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=daefwetwet32432r#$%^
 REFRESH_TOKEN_SECRET_EXPIRY=10d
+
+CLOUDINARY_CLOUD_NAME=dkrzjfncg
+CLOUDINARY_API_KEY=569388542714129
+CLOUDINARY_API_SECRET=Yy2WjVOG3JsqJ4w6KOkWuCgKn3Q
