--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,8 @@ ACCESS_TOKEN_SECRET=js-backend-access-token
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=js-backend-token
 REFRESH_TOKEN_SECRET_EXPIRY=10d
+
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
